--- a/pictures.qrc
+++ b/pictures.qrc
@@ -3,5 +3,6 @@
     <qresource prefix="/">
         <file>images/Pacman.png</file>
         <file>images/Coin.png</file>
+        <file>images/Cereza.png</file>
     </qresource>
 </RCC>
